--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -3764,6 +3764,7 @@ html.js .branch__updates_queue__button {
   font-size: 14px;
 }
 
+.node--location-content-type.node--view-mode-teaser,
 .node--type-facility.node--view-mode-teaser,
 .node--type-branch.node--view-mode-teaser,
 .node--type-branch.node--view-mode-sidebar-teaser,
@@ -3776,7 +3777,8 @@ html.js .branch__updates_queue__button {
   position: relative;
   font-size: 15px;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location, [class*="sidebar"]
@@ -3785,28 +3787,32 @@ html.js .branch__updates_queue__button {
   margin: 0 0 20px;
   border-color: #ccc;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser > span, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser > span, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location > span, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser > span {
   display: block;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .location-item--title, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .location-item--title, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .location-item--title, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .location-item--title {
   display: inline-block;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .location-item--title a, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .location-item--title a {
   color: #5c2e91;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .edit-class-popup, [class*="sidebar"]
@@ -3814,7 +3820,8 @@ html.js .branch__updates_queue__button {
   display: inline-block;
   margin-left: 10px;
 }
-.marker_tooltip .node--type-facility.node--view-mode-teaser, .marker_tooltip
+.marker_tooltip .node--location-content-type.node--view-mode-teaser, .marker_tooltip
+.node--type-facility.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-sidebar-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-class-location, .marker_tooltip
@@ -3825,6 +3832,7 @@ html.js .branch__updates_queue__button {
   height: auto;
   min-height: auto;
 }
+.node--location-content-type.node--view-mode-teaser .location-item--title,
 .node--type-facility.node--view-mode-teaser .location-item--title,
 .node--type-branch.node--view-mode-teaser .location-item--title,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title,
@@ -3834,13 +3842,15 @@ html.js .branch__updates_queue__button {
   font-family: "Cachet", Verdana, Geneva, sans-serif;
   font-weight: bold;
 }
-.marker_tooltip .node--type-facility.node--view-mode-teaser .location-item--title, .marker_tooltip
+.marker_tooltip .node--location-content-type.node--view-mode-teaser .location-item--title, .marker_tooltip
+.node--type-facility.node--view-mode-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-class-location .location-item--title, .marker_tooltip
 .node--type-camp.node--view-mode-teaser .location-item--title {
   margin: 0 0 5px;
 }
+.node--location-content-type.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-facility.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-branch.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title + .node__content,
@@ -3848,7 +3858,9 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .location-item--title + .node__content {
   margin: 33px 0 0;
 }
-.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-area, .node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-state,
+.node--location-content-type.node--view-mode-teaser .location-item--title ~ .field-location-area, .node--location-content-type.node--view-mode-teaser .location-item--title ~ .field-location-state,
+.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-area,
+.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-state,
 .node--type-branch.node--view-mode-teaser .location-item--title ~ .field-location-area,
 .node--type-branch.node--view-mode-teaser .location-item--title ~ .field-location-state,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title ~ .field-location-area,
@@ -3859,6 +3871,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .location-item--title ~ .field-location-state {
   margin: 20px 0 33px;
 }
+.node--location-content-type.node--view-mode-teaser .branch-hours,
 .node--type-facility.node--view-mode-teaser .branch-hours,
 .node--type-branch.node--view-mode-teaser .branch-hours,
 .node--type-branch.node--view-mode-sidebar-teaser .branch-hours,
@@ -3866,6 +3879,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .branch-hours {
   margin-top: 15px;
 }
+.node--location-content-type.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-facility.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-branch.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-branch.node--view-mode-sidebar-teaser .branch-hours td:first-child,
@@ -3873,6 +3887,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .branch-hours td:first-child {
   padding-right: 10px;
 }
+.node--location-content-type.node--view-mode-teaser .field-location-area,
 .node--type-facility.node--view-mode-teaser .field-location-area,
 .node--type-branch.node--view-mode-teaser .field-location-area,
 .node--type-branch.node--view-mode-sidebar-teaser .field-location-area,
@@ -3886,6 +3901,7 @@ html.js .branch__updates_queue__button {
   text-transform: uppercase;
 }
 @media (min-width: 48em) and (max-width: 62em) {
+  .node--location-content-type.node--view-mode-teaser .field-location-area,
   .node--type-facility.node--view-mode-teaser .field-location-area,
   .node--type-branch.node--view-mode-teaser .field-location-area,
   .node--type-branch.node--view-mode-sidebar-teaser .field-location-area,
@@ -3894,6 +3910,7 @@ html.js .branch__updates_queue__button {
     letter-spacing: 1.1px;
   }
 }
+.node--location-content-type.node--view-mode-teaser .field-location-area a,
 .node--type-facility.node--view-mode-teaser .field-location-area a,
 .node--type-branch.node--view-mode-teaser .field-location-area a,
 .node--type-branch.node--view-mode-sidebar-teaser .field-location-area a,
@@ -3902,6 +3919,8 @@ html.js .branch__updates_queue__button {
   color: inherit;
   text-decoration: none;
 }
+.node--location-content-type.node--view-mode-teaser .label-for-field-address,
+.node--location-content-type.node--view-mode-teaser .label-for-field-phone,
 .node--type-facility.node--view-mode-teaser .label-for-field-address,
 .node--type-facility.node--view-mode-teaser .label-for-field-phone,
 .node--type-branch.node--view-mode-teaser .label-for-field-address,
