--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -3801,6 +3801,7 @@ html.js .branch__updates_queue__button {
   color: #c6168d;
 }
 
+.node--location-content-type.node--view-mode-teaser,
 .node--type-facility.node--view-mode-teaser,
 .node--type-branch.node--view-mode-teaser,
 .node--type-branch.node--view-mode-sidebar-teaser,
@@ -3813,7 +3814,8 @@ html.js .branch__updates_queue__button {
   position: relative;
   font-size: 15px;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location, [class*="sidebar"]
@@ -3822,28 +3824,32 @@ html.js .branch__updates_queue__button {
   margin: 0 0 20px;
   border-color: #ccc;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser > span, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser > span, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser > span, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location > span, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser > span {
   display: block;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .location-item--title, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .location-item--title, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .location-item--title, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .location-item--title {
   display: inline-block;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title a, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .location-item--title a, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .location-item--title a {
   color: #5c2e91;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .edit-class-popup, [class*="sidebar"]
@@ -3857,14 +3863,16 @@ html.js .branch__updates_queue__button {
   text-transform: lowercase;
   vertical-align: middle;
 }
-[class*="sidebar"] .node--type-facility.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+[class*="sidebar"] .node--location-content-type.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
+.node--type-facility.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
 .node--type-branch.node--view-mode-teaser .edit-class-popup:hover, [class*="sidebar"]
 .node--type-branch.node--view-mode-sidebar-teaser .edit-class-popup:hover, [class*="sidebar"]
 .node--type-branch.node--view-mode-class-location .edit-class-popup:hover, [class*="sidebar"]
 .node--type-camp.node--view-mode-teaser .edit-class-popup:hover {
   background-color: #0089d0;
 }
-.marker_tooltip .node--type-facility.node--view-mode-teaser, .marker_tooltip
+.marker_tooltip .node--location-content-type.node--view-mode-teaser, .marker_tooltip
+.node--type-facility.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-sidebar-teaser, .marker_tooltip
 .node--type-branch.node--view-mode-class-location, .marker_tooltip
@@ -3875,6 +3883,7 @@ html.js .branch__updates_queue__button {
   height: auto;
   min-height: auto;
 }
+.node--location-content-type.node--view-mode-teaser .location-item--title,
 .node--type-facility.node--view-mode-teaser .location-item--title,
 .node--type-branch.node--view-mode-teaser .location-item--title,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title,
@@ -3884,13 +3893,15 @@ html.js .branch__updates_queue__button {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
   font-weight: bold;
 }
-.marker_tooltip .node--type-facility.node--view-mode-teaser .location-item--title, .marker_tooltip
+.marker_tooltip .node--location-content-type.node--view-mode-teaser .location-item--title, .marker_tooltip
+.node--type-facility.node--view-mode-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title, .marker_tooltip
 .node--type-branch.node--view-mode-class-location .location-item--title, .marker_tooltip
 .node--type-camp.node--view-mode-teaser .location-item--title {
   margin: 0 0 5px;
 }
+.node--location-content-type.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-facility.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-branch.node--view-mode-teaser .location-item--title + .node__content,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title + .node__content,
@@ -3898,7 +3909,9 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .location-item--title + .node__content {
   margin: 33px 0 0;
 }
-.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-area, .node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-state,
+.node--location-content-type.node--view-mode-teaser .location-item--title ~ .field-location-area, .node--location-content-type.node--view-mode-teaser .location-item--title ~ .field-location-state,
+.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-area,
+.node--type-facility.node--view-mode-teaser .location-item--title ~ .field-location-state,
 .node--type-branch.node--view-mode-teaser .location-item--title ~ .field-location-area,
 .node--type-branch.node--view-mode-teaser .location-item--title ~ .field-location-state,
 .node--type-branch.node--view-mode-sidebar-teaser .location-item--title ~ .field-location-area,
@@ -3909,6 +3922,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .location-item--title ~ .field-location-state {
   margin: 20px 0 33px;
 }
+.node--location-content-type.node--view-mode-teaser .branch-hours,
 .node--type-facility.node--view-mode-teaser .branch-hours,
 .node--type-branch.node--view-mode-teaser .branch-hours,
 .node--type-branch.node--view-mode-sidebar-teaser .branch-hours,
@@ -3916,6 +3930,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .branch-hours {
   margin-top: 15px;
 }
+.node--location-content-type.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-facility.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-branch.node--view-mode-teaser .branch-hours td:first-child,
 .node--type-branch.node--view-mode-sidebar-teaser .branch-hours td:first-child,
@@ -3923,6 +3938,7 @@ html.js .branch__updates_queue__button {
 .node--type-camp.node--view-mode-teaser .branch-hours td:first-child {
   padding-right: 10px;
 }
+.node--location-content-type.node--view-mode-teaser .field-location-area,
 .node--type-facility.node--view-mode-teaser .field-location-area,
 .node--type-branch.node--view-mode-teaser .field-location-area,
 .node--type-branch.node--view-mode-sidebar-teaser .field-location-area,
@@ -3936,6 +3952,7 @@ html.js .branch__updates_queue__button {
   text-transform: uppercase;
 }
 @media (min-width: 48em) and (max-width: 62em) {
+  .node--location-content-type.node--view-mode-teaser .field-location-area,
   .node--type-facility.node--view-mode-teaser .field-location-area,
   .node--type-branch.node--view-mode-teaser .field-location-area,
   .node--type-branch.node--view-mode-sidebar-teaser .field-location-area,
@@ -3944,6 +3961,7 @@ html.js .branch__updates_queue__button {
     letter-spacing: 1.1px;
   }
 }
+.node--location-content-type.node--view-mode-teaser .field-location-area a,
 .node--type-facility.node--view-mode-teaser .field-location-area a,
 .node--type-branch.node--view-mode-teaser .field-location-area a,
 .node--type-branch.node--view-mode-sidebar-teaser .field-location-area a,
@@ -3952,6 +3970,8 @@ html.js .branch__updates_queue__button {
   color: inherit;
   text-decoration: none;
 }
+.node--location-content-type.node--view-mode-teaser .label-for-field-address,
+.node--location-content-type.node--view-mode-teaser .label-for-field-phone,
 .node--type-facility.node--view-mode-teaser .label-for-field-address,
 .node--type-facility.node--view-mode-teaser .label-for-field-phone,
 .node--type-branch.node--view-mode-teaser .label-for-field-address,
