--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -7355,6 +7355,7 @@ article .node--view-mode-flexible-content h2 a span {
 .paragraph--type--location-filter-by-amenities .views-element-container form input[type="submit"] {
   display: none;
 }
+
 .paragraph--type--upcoming-events h2 {
   letter-spacing: normal;
   text-transform: none;
@@ -7634,7 +7635,7 @@ html.js .path-account .ajax-progress .throbber, html.js .path-account .flag-wait
 
 @media (min-width: 62em) {
   body {
-    padding-top: 83px !important;
+    padding-top: 100px !important;
     -webkit-transition: padding-top 0.2s ease;
     -moz-transition: padding-top 0.2s ease;
     -ms-transition: padding-top 0.2s ease;
@@ -7647,7 +7648,7 @@ html.js .path-account .ajax-progress .throbber, html.js .path-account .flag-wait
 }
 @media (min-width: 0) and (max-width: 62em) {
   body {
-    padding-top: 52px !important;
+    padding-top: 80px !important;
     max-width: 100%;
   }
 }
@@ -7823,7 +7824,6 @@ header#page-head:after {
 @media (min-width: 0) and (max-width: 62em) {
   header#page-head {
     position: relative;
-    z-index: 999;
   }
 }
 @media (min-width: 1200px) {
@@ -7849,7 +7849,13 @@ header#page-head .top-navs .nav-global {
   margin-bottom: 0;
   border-radius: 0;
   background-color: #f8f8f8;
+  min-height: 100px;
   width: 100%;
+}
+@media (min-width: 0) and (max-width: 62em) {
+  header#page-head .top-navs .nav-global {
+    min-height: 80px;
+  }
 }
 header#page-head .top-navs .nav-global .navbar-header {
   padding: 5px 0 13px;
@@ -7874,9 +7880,8 @@ header#page-head .top-navs .nav-global .navbar-header .navbar-toggler {
   }
   header#page-head .top-navs .nav-global .navbar-header .navbar-toggler {
     display: block !important;
-    float: right;
-    position: absolute;
-    right: 15px;
+    float: left;
+    position: relative;
     outline: 0 !important;
     margin-top: 8px;
     background: transparent;
@@ -7922,6 +7927,9 @@ header#page-head .top-navs .nav-global .navbar-header .navbar-toggler {
     transform-origin: 50%;
   }
 }
+header#page-head .top-navs #block-topmenu2 .expanded-menu + .dropdown-menu {
+  display: block;
+}
 header#page-head .top-navs .nav-wrapper {
   min-height: 62px;
   z-index: 998;
@@ -7948,7 +7956,7 @@ header#page-head .top-navs .nav-wrapper .main-nav {
   transition: top 0.2s linear;
 }
 header#page-head .top-navs .nav-wrapper .main-nav.affix {
-  top: 52px;
+  top: 100px;
 }
 header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu {
   width: 100%;
@@ -8076,6 +8084,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .n
   display: none;
 }
 @media (min-width: 0) and (max-width: 62em) {
+  header#page-head .top-navs #block-topmenu2,
   header#page-head .top-navs #block-anonymoususersmenu--2,
   header#page-head .top-navs #block-anonymoususersmenu,
   header#page-head .top-navs #block-openy-lily-user-menu,
@@ -8084,6 +8093,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .n
     display: none !important;
   }
 }
+header#page-head .top-navs #block-topmenu2 .nav li a,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li a,
 header#page-head .top-navs #block-anonymoususersmenu .nav li a,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li a,
@@ -8091,7 +8101,7 @@ header#page-head .top-navs #block-cccuseraccountmenu--2 .nav li a,
 header#page-head .top-navs #block-cccuseraccountmenu .nav li a {
   color: #777777;
   border-top: 2px solid transparent;
-  line-height: 50px;
+  line-height: 68px;
   font-size: 16px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
@@ -8099,6 +8109,19 @@ header#page-head .top-navs #block-cccuseraccountmenu .nav li a {
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
+@media (min-width: 48em) and (max-width: 61.9375em) {
+  header#page-head .top-navs #block-topmenu2 .nav li a,
+  header#page-head .top-navs #block-anonymoususersmenu--2 .nav li a,
+  header#page-head .top-navs #block-anonymoususersmenu .nav li a,
+  header#page-head .top-navs #block-openy-lily-user-menu .nav li a,
+  header#page-head .top-navs #block-cccuseraccountmenu--2 .nav li a,
+  header#page-head .top-navs #block-cccuseraccountmenu .nav li a {
+    margin-top: 0;
+    padding: 15px 6px;
+    font-size: 13px;
+  }
+}
+header#page-head .top-navs #block-topmenu2 .nav li a:hover,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li a:hover,
 header#page-head .top-navs #block-anonymoususersmenu .nav li a:hover,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li a:hover,
@@ -8108,6 +8131,7 @@ header#page-head .top-navs #block-cccuseraccountmenu .nav li a:hover {
   background-color: #fff;
   color: black;
 }
+header#page-head .top-navs #block-topmenu2 .nav li.is-active a,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li.is-active a,
 header#page-head .top-navs #block-anonymoususersmenu .nav li.is-active a,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li.is-active a,
@@ -8130,10 +8154,17 @@ header#page-head .top-navs #block-cccuseraccountmenu--2 ul li:first-child .welco
   color: #777777;
   cursor: default;
 }
+header#page-head .top-navs #block-topmenu2 h2,
+header#page-head .top-navs #block-anonymoususersmenu h2,
+header#page-head .top-navs #block-anonymoususersmenu--2 h2,
+header#page-head .top-navs #block-openy-lily-user-menu h2 {
+  display: none;
+}
+header#page-head .top-navs #block-topmenu2 .nav li:first-child a,
 header#page-head .top-navs #block-anonymoususersmenu .nav li:first-child a,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li:first-child a,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li:first-child a {
-  padding: 7px 15px;
+  padding: 4px 15px;
   border-radius: 5px;
   background-color: #b92f9e;
   text-transform: capitalize;
@@ -8142,9 +8173,10 @@ header#page-head .top-navs #block-openy-lily-user-menu .nav li:first-child a {
   line-height: 20px;
   color: white;
   text-shadow: none;
-  margin: 24px 5px 0 0;
+  margin: 36px 5px 0 0;
   border-top: none;
 }
+header#page-head .top-navs #block-topmenu2 .nav li:first-child a:hover,
 header#page-head .top-navs #block-anonymoususersmenu .nav li:first-child a:hover,
 header#page-head .top-navs #block-anonymoususersmenu--2 .nav li:first-child a:hover,
 header#page-head .top-navs #block-openy-lily-user-menu .nav li:first-child a:hover {
@@ -8194,6 +8226,7 @@ header#page-head.tiny .top-navs .nav-global .navbar-header {
 header#page-head.tiny .top-navs .nav-global .navbar-header #block-openy-lily-branding a img {
   width: 55px;
 }
+header#page-head.tiny .top-navs #block-topmenu2 li a,
 header#page-head.tiny .top-navs #block-anonymoususersmenu li a,
 header#page-head.tiny .top-navs #block-anonymoususersmenu--2 li a,
 header#page-head.tiny .top-navs #block-openy-lily-user-menu li a,
@@ -8201,6 +8234,7 @@ header#page-head.tiny .top-navs #block-cccuseraccountmenu li a,
 header#page-head.tiny .top-navs #block-cccuseraccountmenu--2 li a {
   line-height: 19px;
 }
+header#page-head.tiny .top-navs #block-topmenu2 ul li:first-child a,
 header#page-head.tiny .top-navs #block-openy-lily-user-menu ul li:first-child a,
 header#page-head.tiny .top-navs #block-anonymoususersmenu ul li:first-child a,
 header#page-head.tiny .top-navs #block-anonymoususersmenu--2 ul li:first-child a {
@@ -8226,8 +8260,40 @@ header#page-head.expanded-search.tiny .main-nav.affix {
   top: 140px !important;
 }
 
-.landing-header {
-  margin-bottom: 20px;
+.navbar-brand {
+  position: absolute;
+  display: block;
+  overflow: hidden;
+  box-sizing: content-box;
+  margin: 7px 0 5px 0;
+  padding: 5px 0 0 30px;
+  width: 220px;
+  height: 72%;
+  background: url(../img/ymca-logo-full.svg) no-repeat 12px 0;
+  background-size: contain;
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .navbar-brand {
+    left: 35%;
+    float: none;
+    margin-left: -24px;
+    padding: 0;
+    height: 70%;
+    background-position: left top;
+    background-size: contain;
+  }
+}
+
+.no-smil .affix .navbar-brand {
+  padding-top: 70px !important;
+  background-image: url(../img/ymca-logo-full.png);
+}
+.no-smil .navbar {
+  background-color: #eeeeee;
+}
+
+.csstransitions.no-smil .affix .navbar-brand {
+  background-image: url(../img/ymca-logo-full.png);
 }
 
 .viewport .nav-level-2.open {
