--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -664,7 +664,7 @@
 }
 .field-prgf-description {
   .inner-wrapper {
-    background: #f0f0f0;
+    background: $grey20;
     box-shadow: 0 2px 2px rgba(0,0,0,0.2);
     .promo-text {
       padding-bottom: 10px;
